--- a/MultiClipboardWidget/MultiClipboardWidget.entitlements
+++ b/MultiClipboardWidget/MultiClipboardWidget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.jtien.MultiClipboard</string>
+		<string>group.com.jtien.clipboard</string>
 	</array>
 </dict>
 </plist>
